--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,9 +1,11 @@
 // create variables
-$background-color:#a0f2d7;
-$alternate-color: #a0f2d7;      
+// $background-color:#0e1212;
+//$background-color:#a0f2d7;    
+$background-color:#a0f2d7;     
+$alternate-color: #a0f2d7;     
 $heading-color: darkgrey;
 $hover-color: darkblue;
 $text-color: black; 
-$white-color: white;
+$white-color: #DFFDFF;
 $heading-font-family: sans-serif;
 $body-font-family: 'Montserrat', sans-serif;
