--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,6 +9,7 @@
   position: absolute;
   font-size: 5em;
   color: white;
+  z-index: -1;
 }
 
 .intro-text::before {
@@ -138,7 +139,7 @@ header img {
 }
 
 .Navbar {
-  background-color: white;
+  background-color: #DFFDFF;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -327,14 +328,7 @@ header img {
   background-position: center;
   background-size: cover;
   color: transparent;
-  border-radius: 5px;
-  /* Phone Styles */
-}
-
-@media only screen and (max-width: 600px) {
-  #ytc {
-    max-width: 275px;
-  }
+  border-radius: 15px;
 }
 
 #ytc:hover {
@@ -349,14 +343,7 @@ header img {
   background-position: center;
   background-size: cover;
   color: transparent;
-  border-radius: 5px;
-  /* Phone Styles */
-}
-
-@media only screen and (max-width: 600px) {
-  #taskio {
-    max-width: 275px;
-  }
+  border-radius: 15px;
 }
 
 #taskio:hover {
@@ -371,14 +358,7 @@ header img {
   background-position: center;
   background-size: cover;
   color: transparent;
-  border-radius: 5px;
-  /* Phone Styles */
-}
-
-@media only screen and (max-width: 600px) {
-  #readme {
-    max-width: 275px;
-  }
+  border-radius: 15px;
 }
 
 #readme:hover {
@@ -393,14 +373,7 @@ header img {
   background-position: center;
   background-size: cover;
   color: transparent;
-  border-radius: 5px;
-  /* Phone Styles */
-}
-
-@media only screen and (max-width: 600px) {
-  #pokemon {
-    max-width: 275px;
-  }
+  border-radius: 15px;
 }
 
 #pokemon:hover {
@@ -415,14 +388,7 @@ header img {
   background-position: center;
   background-size: cover;
   color: transparent;
-  border-radius: 5px;
-  /* Phone Styles */
-}
-
-@media only screen and (max-width: 600px) {
-  #rpsls {
-    max-width: 275px;
-  }
+  border-radius: 15px;
 }
 
 #rpsls:hover {
@@ -437,14 +403,7 @@ header img {
   background-position: center;
   background-size: cover;
   color: transparent;
-  border-radius: 5px;
-  /* Phone Styles */
-}
-
-@media only screen and (max-width: 600px) {
-  #old_port {
-    max-width: 275px;
-  }
+  border-radius: 15px;
 }
 
 #old_port:hover {
@@ -459,14 +418,7 @@ header img {
   background-position: center;
   background-size: cover;
   color: transparent;
-  border-radius: 5px;
-  /* Phone Styles */
-}
-
-@media only screen and (max-width: 600px) {
-  #new_port {
-    max-width: 275px;
-  }
+  border-radius: 15px;
 }
 
 #new_port:hover {
@@ -481,14 +433,7 @@ header img {
   background-position: center;
   background-size: cover;
   color: transparent;
-  border-radius: 5px;
-  /* Phone Styles */
-}
-
-@media only screen and (max-width: 600px) {
-  #pokemon {
-    max-width: 275px;
-  }
+  border-radius: 15px;
 }
 
 #pokemon:hover {
@@ -587,7 +532,7 @@ header img {
 
 .intro-container h2 {
   font-size: 4rem;
-  color: white;
+  color: #DFFDFF;
   -webkit-text-stroke-width: 3px;
   -webkit-text-stroke-color: black;
 }
@@ -621,6 +566,16 @@ header img {
   font-family: sans-serif;
 }
 
+.intro_paragraph .more-button {
+  margin-top: 50px;
+  padding: 25px;
+  font-size: 2.5rem;
+  color: black;
+  display: block;
+  text-align: center;
+  cursor: pointer;
+}
+
 .intro-sec1 {
   margin: 5px;
   margin-right: 30px;
@@ -628,9 +583,49 @@ header img {
 }
 
 .intro-content {
-  margin-top: 2.5rem;
+  margin-top: 5em;
   line-height: 1.7em;
-  font-size: 1rem;
+  font-size: 1.2rem;
+}
+
+.intro-content p {
+  margin-top: 25px;
+}
+
+.intro-content .stack {
+  margin-top: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.intro-content .stack span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 10px;
+  margin: 5px;
+  font-size: .75em;
 }
 
 /*******************************/
@@ -903,8 +898,8 @@ body {
   width: 100vw;
   height: 100vh;
   font-family: "Montserrat", sans-serif;
-  background: -webkit-gradient(linear, left top, right top, color-stop(50%, #a0f2d7), color-stop(50%, white));
-  background: linear-gradient(90deg, #a0f2d7 50%, white 50%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(50%, #a0f2d7), color-stop(50%, #DFFDFF));
+  background: linear-gradient(90deg, #a0f2d7 50%, #DFFDFF 50%);
 }
 
 main {
