--- a/src/styles/partials/_homecontent.scss
+++ b/src/styles/partials/_homecontent.scss
@@ -27,16 +27,25 @@
 }
 .intro_paragraph{
     p span.features-special {
-        color:$text-color;
+        color: $text-color;
         font-size: 2rem;
         font-weight: 600;
     }
     p span:nth-child(4).features-special {
-            color:$alternate-color;
-            font-size: 2rem;
-            font-weight: 600;
-            font-family: $heading-font-family;
+        color:$alternate-color;
+        font-size: 2rem;
+        font-weight: 600;
+        font-family: $heading-font-family;
         }
+    .more-button{
+        margin-top: 50px;
+        padding: 25px;
+        font-size: 2.5rem;
+        color: black;
+        display:block;
+        text-align:center;
+        cursor: pointer;
+        }  
 }
 
 .intro-sec1 {
@@ -46,27 +55,41 @@
 }
 
 .intro-content {
-    margin-top: 2.5rem;
+    margin-top: 5em;
     line-height: 1.7em;
-    font-size: 1rem;
-   
-}
+    font-size: 1.2rem;
+
+    p{
+        margin-top: 25px;
+    }
+    .stack {
+        margin-top: 25px;
+        @include flex(row, center);
+        span {
+            @include flex(column, center);
+            border: 1px solid black;
+            border-radius: 15px;
+            padding: 10px;
+            margin: 5px;
+            font-size: .75em;
+        }
+    }
     
+}
+
+  
 /*******************************/
 
 /* Tablet Styles */ /** MAIN CONTENT */
 @media only screen and (min-width: 768px)  {
-    
     .intro-sec1, .intro-text {
         margin-right: 200px;
         margin-left: 200px; 
     }
-        
 }
-
+ 
 /* Desktop Styles */ /* MAIN CONTENT */
 @media only screen and (min-width: 996px) {
-   
     .intro-sec1, .intro-text{
         margin-right: 200px;
         margin-left: 200px;
@@ -78,9 +101,7 @@
     }
     .intro-container h1 {
             font-size: 6rem;
-        
         }
-
         p span.features-special {
         font-size: 3rem;
         }
