--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -671,10 +671,12 @@ header img {
       -ms-flex-direction: column;
           flex-direction: column;
   border: 1px solid black;
-  border-radius: 15px;
+  border-radius: 25px;
   padding: 10px;
   margin: 5px;
   font-size: .75em;
+  background-color: black;
+  color: white;
 }
 
 /*******************************/
