--- a/src/styles/partials/_homecontent.scss
+++ b/src/styles/partials/_homecontent.scss
@@ -70,10 +70,12 @@
         span {
             @include flex(column, center);
             border: 1px solid black;
-            border-radius: 15px;
+            border-radius: 25px;
             padding: 10px;
             margin: 5px;
             font-size: .75em;
+            background-color: black;
+            color: white;
         }
     }
     
