--- a/src/styles/partials/_projects.scss
+++ b/src/styles/partials/_projects.scss
@@ -7,7 +7,23 @@
     margin-bottom: 200px;
     margin-top: 100px;   
    
-  }
+    .project-heading{
+      margin-bottom: 80px;
+      padding: 10px;
+      width: 65vw;
+      max-width: 1000px;
+      h3{
+          
+          text-align: left;
+         
+         
+      }
+    }
+    h4{
+      margin-left: 10px;
+    }
+
+}
 
 .all-projects{
     margin-top: 5%;
@@ -49,9 +65,7 @@
 
         @media only screen and (min-width: 601px) {
           margin: 0.5rem 0.5rem;
-        }
-    
-       
+        }  
     }
 }
 
@@ -83,22 +97,12 @@
     @include background($background-color, "../imgs/pokemon.png");
   }
 
-.project-heading{
-    margin-bottom: 80px;
-    padding: 10px;
-    width: 65vw;
-    max-width: 1000px;
-    h3{
-        
-        text-align: left;
-       
-    }
-}
 
+/*project heading animation*/
 .project{ 
   position: absolute; 
   z-index: -1;
-  font-size: 4em; 
+  font-size: 3em; 
   color: white; 
 } 
 
