--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -58,13 +58,10 @@
 
 .footer-links {
     text-decoration: none;
-    color: $alternate-color;
+    color: black;
     font-size: 1rem;
     font-weight: 600;
-    background-color: black;
-    color:white;
     padding: 5px;
-    border-radius: 25px;
 }
 
 /* Tablet Styles */ /* FOOTER */
