updated project images

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -353,7 +353,7 @@ header img {
 }
 
 #taskio {
-  background-image: url(../imgs/taskio.png);
+  background-image: url(../imgs/taskio.jpg);
   background-position: center;
   background-size: cover;
   color: transparent;
