--- a/src/styles/partials/_projects.scss
+++ b/src/styles/partials/_projects.scss
@@ -74,7 +74,7 @@
   }
 
 #taskio {
-    @include background($background-color, "../imgs/taskio.png");
+    @include background($background-color, "../imgs/taskio.jpg");
   }
 
 #readme {
