--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,7 @@
 /*****ANIMATIONS******/
 /*****Welcome Animation******/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Trispace:wght@200;400;500;600&display=swap");
 .intro-text {
   margin: 5px;
   margin-right: 30px;
@@ -15,13 +16,15 @@
 .intro-text::before {
   content: attr(data-text);
   position: absolute;
-  color: black;
+  color: #aa9f26;
   overflow: hidden;
   width: 0%;
   -webkit-transition: 1s;
   transition: 1s;
   -webkit-animation: fill 3s linear;
           animation: fill 3s linear;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 @-webkit-keyframes fill {
@@ -55,7 +58,7 @@
   left: 51%;
   right: 51%;
   bottom: 0;
-  background: #a0f2d7;
+  background: #aa9f26;
   height: 4px;
   -webkit-transition-property: left, right;
   transition-property: left, right;
@@ -99,36 +102,81 @@
   }
 }
 
-/*****FADING ANIMATION******/
-@keyframes fadeIn {
+/* Bob */
+@-webkit-keyframes hvr-bob {
   0% {
-    opacity: 0;
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+  50% {
+    -webkit-transform: translateY(-4px);
+    transform: translateY(-4px);
   }
   100% {
-    opacity: 1;
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
   }
 }
 
-@-webkit-keyframes fadeIn {
+@keyframes hvr-bob {
   0% {
-    opacity: 0;
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+  50% {
+    -webkit-transform: translateY(-4px);
+    transform: translateY(-4px);
   }
   100% {
-    opacity: 1;
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
   }
 }
 
-.desktop-container {
-  -webkit-animation: fadeIn ease-in 1;
-  animation: fadeIn ease-in 1;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
+@-webkit-keyframes hvr-bob-float {
+  100% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+}
+
+@keyframes hvr-bob-float {
+  100% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+}
+
+.hvr-bob {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+
+.hvr-bob:hover, .hvr-bob:focus, .hvr-bob:active {
+  -webkit-animation-name: hvr-bob-float, hvr-bob;
+  animation-name: hvr-bob-float, hvr-bob;
+  -webkit-animation-duration: .3s, 1.5s;
+  animation-duration: .3s, 1.5s;
+  -webkit-animation-delay: 0s, .3s;
+  animation-delay: 0s, .3s;
+  -webkit-animation-timing-function: ease-out, ease-in-out;
+  animation-timing-function: ease-out, ease-in-out;
+  -webkit-animation-iteration-count: 1, infinite;
+  animation-iteration-count: 1, infinite;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-direction: normal, alternate;
+  animation-direction: normal, alternate;
 }
 
 /* menu bar area drop down*/
 /* Mobile menu */
 header {
-  background-color: #a0f2d7;
+  background-color: #aa9f26;
   position: fixed;
   height: 70px;
   width: 100%;
@@ -139,7 +187,7 @@ header img {
 }
 
 .Navbar {
-  background-color: #DFFDFF;
+  background-color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -163,9 +211,14 @@ header img {
   text-decoration: none;
   margin-left: auto;
   text-decoration: none;
+  border-bottom: 1px solid black;
 }
 
-.item {
+.Navbar__Items li:nth-child(2), .Navbar__Items li:nth-child(3), .Navbar__Items li:nth-child(4) {
+  border-left: 1px solid black;
+}
+
+.Navbar__Items .item {
   text-decoration: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -173,6 +226,7 @@ header img {
   padding: 10px;
   color: black;
   font-weight: 600;
+  font-family: "Trispace", sans-serif;
 }
 
 .se-logo {
@@ -181,7 +235,8 @@ header img {
   border-radius: 50px;
   border: 2px solid black;
   font-weight: 600;
-  font-size: 1.2em;
+  font-size: 1.3em;
+  font-family: "Trispace", sans-serif;
 }
 
 .Navbar__Link-toggle {
@@ -204,6 +259,9 @@ header img {
     display: none;
     margin-left: 0;
     text-align: center;
+  }
+  .Navbar__Items li:nth-child(2), .Navbar__Items li:nth-child(3), .Navbar__Items li:nth-child(4) {
+    border-left: none;
   }
   .Navbar__ToggleShow {
     display: -webkit-box;
@@ -257,6 +315,7 @@ header img {
   padding: 10px;
   width: 65vw;
   max-width: 1000px;
+  font-family: "Trispace", sans-serif;
 }
 
 .container .project-heading h3 {
@@ -287,8 +346,8 @@ header img {
   text-decoration: none;
   color: white;
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 30%;
-          flex: 1 1 30%;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
 }
 
 .all-projects div {
@@ -347,7 +406,7 @@ header img {
 
 #ytc:hover {
   color: black;
-  background: #a0f2d7;
+  background: #aa9f26;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
@@ -361,7 +420,7 @@ header img {
 
 #taskio:hover {
   color: black;
-  background: #a0f2d7;
+  background: #aa9f26;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
@@ -375,7 +434,7 @@ header img {
 
 #readme:hover {
   color: black;
-  background: #a0f2d7;
+  background: #aa9f26;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
@@ -389,7 +448,7 @@ header img {
 
 #pokemon:hover {
   color: black;
-  background: #a0f2d7;
+  background: #aa9f26;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
@@ -403,7 +462,7 @@ header img {
 
 #rpsls:hover {
   color: black;
-  background: #a0f2d7;
+  background: #aa9f26;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
@@ -417,7 +476,7 @@ header img {
 
 #old_port:hover {
   color: black;
-  background: #a0f2d7;
+  background: #aa9f26;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
@@ -431,7 +490,7 @@ header img {
 
 #new_port:hover {
   color: black;
-  background: #a0f2d7;
+  background: #aa9f26;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
@@ -445,7 +504,7 @@ header img {
 
 #pokemon:hover {
   color: black;
-  background: #a0f2d7;
+  background: #aa9f26;
   -webkit-transition: .5s ease-in;
   transition: .5s ease-in;
 }
@@ -454,14 +513,14 @@ header img {
 .project {
   position: absolute;
   z-index: -1;
-  font-size: 3em;
+  font-size: 3.5em;
   color: white;
 }
 
 .project::before {
   content: attr(data-text);
   position: absolute;
-  color: black;
+  color: #aa9f26;
   overflow: hidden;
   width: 0%;
   -webkit-transition: 1s;
@@ -486,8 +545,8 @@ header img {
 
 /* Phone Styles */
 @media only screen and (max-width: 600px) {
-  .container {
-    width: 40px;
+  .container a {
+    width: 250px;
   }
 }
 
@@ -510,6 +569,37 @@ header img {
 }
 
 /* Individual Project Styles */
+.one-projects {
+  margin-top: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.one-projects div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 /*****WELCOME INTRO SECTION******/
 .intro-container {
   display: -webkit-box;
@@ -529,21 +619,21 @@ header img {
 
 .intro-container h2 {
   font-size: 4rem;
-  color: #DFFDFF;
-  -webkit-text-stroke-width: 3px;
-  -webkit-text-stroke-color: black;
+  color: white;
+  font-family: "Trispace", sans-serif;
 }
 
 .intro-container h1 {
   font-size: 5em;
-  font-family: sans-serif;
+  font-family: "Trispace", sans-serif;
   font-weight: bold;
   margin-bottom: 25px;
+  margin-top: 100px;
 }
 
 .intro-container h1 span.features-special {
-  color: #a0f2d7;
-  font-size: 4rem;
+  color: #aa9f26;
+  font-size: 6rem;
 }
 
 .intro-container h3 {
@@ -558,10 +648,10 @@ header img {
 }
 
 .intro_paragraph p span:nth-child(4).features-special {
-  color: #a0f2d7;
+  color: #aa9f26;
   font-size: 2rem;
   font-weight: 600;
-  font-family: sans-serif;
+  font-family: "Trispace", sans-serif;
 }
 
 .intro_paragraph .more-button {
@@ -584,6 +674,7 @@ header img {
   margin-top: 5em;
   line-height: 2em;
   font-size: 1.2rem;
+  z-index: -1;
 }
 
 .intro-content p {
@@ -591,7 +682,9 @@ header img {
 }
 
 .intro-content .stack {
-  margin-top: 25px;
+  margin-top: 75px;
+  margin-bottom: 50px;
+  font-family: "Trispace", sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -711,7 +804,7 @@ header img {
   padding: 10px;
   -ms-flex-item-align: left;
       align-self: left;
-  font-family: sans-serif;
+  font-family: "Trispace", sans-serif;
   font-weight: bold;
   font-size: 2rem;
 }
@@ -898,8 +991,6 @@ body {
   width: 100vw;
   height: 100vh;
   font-family: "Montserrat", sans-serif;
-  background: -webkit-gradient(linear, left top, right top, color-stop(50%, #a0f2d7), color-stop(50%, #DFFDFF));
-  background: linear-gradient(90deg, #a0f2d7 50%, #DFFDFF 50%);
 }
 
 main {
