--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,7 +8,7 @@
 @import 'partials/footer';
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Trispace:wght@200;400;500;600&display=swap');
 
 * {
     margin: 0;
@@ -22,10 +22,10 @@ body {
     width: 100vw;
     height: 100vh;
     font-family: $body-font-family;
-    background: linear-gradient(90deg, $background-color 50%, $white-color 50%);
+    //background: linear-gradient(90deg, $background-color 50%, $white-color 50%);
 }
 
-main {
+main {   
     margin: auto;
     width: 100%;
     max-width: 1000px;
