--- a/src/styles/partials/_animations.scss
+++ b/src/styles/partials/_animations.scss
@@ -16,12 +16,12 @@
 .intro-text::before {  
   content: attr(data-text); 
   position: absolute; 
-  color: black; 
+  color: $alternate-color; 
   overflow: hidden; 
   width: 0%; 
   transition: 1s; 
   animation: fill 3s linear;
-
+  animation-fill-mode: forwards;
 } 
 
 @keyframes fill {
@@ -74,17 +74,70 @@
           to {   width: 60%;}
       }
 
-/*****FADING ANIMATION******/
-@keyframes fadeIn { 0% {opacity: 0;} 100% {opacity: 1;} }
-@-moz-keyframes fadeIn { 0% {opacity: 0;} 100% {opacity: 1;} }
-@-webkit-keyframes fadeIn { 0% {opacity: 0;} 100% {opacity: 1;} }
 
-.desktop-container {
-    -webkit-animation:fadeIn ease-in 1; 
-    animation:fadeIn ease-in 1;
-    -webkit-animation-duration:1s;
-    -moz-animation-duration:1s;
-    animation-duration:1s;
+
+
+/* Bob */
+@-webkit-keyframes hvr-bob {
+  0% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+  50% {
+    -webkit-transform: translateY(-4px);
+    transform: translateY(-4px);
+  }
+  100% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
 }
-
-
+@keyframes hvr-bob {
+  0% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+  50% {
+    -webkit-transform: translateY(-4px);
+    transform: translateY(-4px);
+  }
+  100% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+}
+@-webkit-keyframes hvr-bob-float {
+  100% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+}
+@keyframes hvr-bob-float {
+  100% {
+    -webkit-transform: translateY(-8px);
+    transform: translateY(-8px);
+  }
+}
+.hvr-bob {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+.hvr-bob:hover, .hvr-bob:focus, .hvr-bob:active {
+  -webkit-animation-name: hvr-bob-float, hvr-bob;
+  animation-name: hvr-bob-float, hvr-bob;
+  -webkit-animation-duration: .3s, 1.5s;
+  animation-duration: .3s, 1.5s;
+  -webkit-animation-delay: 0s, .3s;
+  animation-delay: 0s, .3s;
+  -webkit-animation-timing-function: ease-out, ease-in-out;
+  animation-timing-function: ease-out, ease-in-out;
+  -webkit-animation-iteration-count: 1, infinite;
+  animation-iteration-count: 1, infinite;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-direction: normal, alternate;
+  animation-direction: normal, alternate;
+}
