--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,7 +1,7 @@
 /*****ANIMATIONS******/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Trispace:wght@200;400;500;600&display=swap");
-.typewriter h1, .project {
+.typewriter h1, .project, .project-single {
   color: #aa9f26;
   overflow: hidden;
   /* Ensures the content is not revealed until the animation */
@@ -574,7 +574,47 @@ header img {
           flex-direction: row;
 }
 
-.one-projects div {
+.one-projects .main-project-heading .project-single {
+  font-size: 3em;
+  margin-bottom: 5px;
+}
+
+.one-projects .main-project-heading p {
+  margin: 30px 0px 30px 0px;
+}
+
+.one-projects .resources {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.one-projects .resources a {
+  display: inline-block;
+}
+
+.one-projects .resources a:after {
+  content: " / ";
+}
+
+.one-projects .tech-stack {
+  margin-top: 10px;
+  margin-bottom: 50px;
+  font-family: "Trispace", sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.one-projects .tech-stack li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -587,6 +627,23 @@ header img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  border: 1px solid black;
+  border-radius: 25px;
+  padding: 10px;
+  margin: 10px 10px 10px 0px;
+  font-size: .75em;
+  background-color: black;
+  color: white;
+}
+
+.one-projects img {
+  margin: 30px 0px 30px 0px;
+  width: 50%;
+}
+
+.one-projects .content {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 /*****WELCOME INTRO SECTION******/
