--- a/src/styles/partials/_animations.scss
+++ b/src/styles/partials/_animations.scss
@@ -1,7 +1,7 @@
 
 /*****ANIMATIONS******/
 
-.typewriter h1, .project {
+.typewriter h1, .project, .project-single {
   color: $alternate-color; 
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .15em solid orange; /* The typwriter cursor */
