--- a/src/styles/partials/_animations.scss
+++ b/src/styles/partials/_animations.scss
@@ -69,6 +69,10 @@
           to {   width: 60%;}
       }
 
+/*****FADING ANIMATION******/
+@keyframes fadeIn { 0% {opacity: 0;} 100% {opacity: 1;} }	@keyframes fadeIn { 0% {opacity: 0;} 100% {opacity: 1;} }
+@-moz-keyframes fadeIn { 0% {opacity: 0;} 100% {opacity: 1;} }	@-moz-keyframes fadeIn { 0% {opacity: 0;} 100% {opacity: 1;} }
+@-webkit-keyframes fadeIn { 0% {opacity: 0;} 100% {opacity: 1;} }	@-webkit-keyframes fadeIn { 0% {opacity: 0;} 100% {opacity: 1;} }
 
 
 
@@ -135,4 +139,24 @@
   animation-fill-mode: forwards;
   -webkit-animation-direction: normal, alternate;
   animation-direction: normal, alternate;
+}
+
+
+/* BACKGROUND TRANSITIONS */
+/* Fade */
+.hvr-fade {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  overflow: hidden;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+}
+.hvr-fade:hover, .hvr-fade:focus, .hvr-fade:active {
+  background-color: $alternate-color;
+  color: white;
 }
