--- a/src/styles/partials/_homecontent.scss
+++ b/src/styles/partials/_homecontent.scss
@@ -43,6 +43,10 @@
         display:block;
         text-align:center;
         cursor: pointer;
+        &:hover{ 
+            color: $alternate-color;
+            cursor: pointer;
+          }
         }  
 }
 
