--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -639,7 +639,11 @@ header img {
 }
 
 .one-projects .main-project-heading p {
-  margin: 40px 0px 40px 0px;
+  margin: 40px 0px 20px 0px;
+}
+
+.one-projects p {
+  margin: 20px 0px 40px 0px;
 }
 
 .one-projects .resources {
@@ -661,8 +665,8 @@ header img {
 }
 
 .one-projects .tech-stack {
-  margin-top: 10px;
-  margin-bottom: 50px;
+  margin-top: 20px;
+  margin-bottom: 40px;
   font-family: "Trispace", sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -704,7 +708,7 @@ header img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background-color: lightgray;
+  background-color: #F0FBDD;
 }
 
 .one-projects .project-content img {
@@ -715,6 +719,7 @@ header img {
 .one-projects .project-content .content {
   margin: 20px;
   font-size: .9em;
+  letter-spacing: .08em;
 }
 
 /* Tablet Styles */
